# claim-extraction-api

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  pyproject.toml  railway.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: health-endpoint-blocker.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-core-extraction-api/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md  01-UAT.md
.planning/phases/02-web-ui/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-UAT.md
.planning/phases/03-deployment/: 03-01-PLAN.md  03-01-SUMMARY.md  03-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: dependencies.py  exceptions.py  main.py
src/config/: settings.py
src/config/prompts/: claim_extraction.py  topic_extraction.py
src/extraction/: claim_extractor.py  topic_extractor.py
src/routers/: generate.py  health.py
src/schemas/: llm.py  requests.py  responses.py
src/services/: claim_generation.py
src/static/: app.js
src/templates/: index.html
src/utils/: text.py
tests/: conftest.py
tests/test_extraction/: test_claim_extractor.py  test_topic_extractor.py
tests/test_routers/: test_generate.py  test_health.py  test_ui.py
tests/test_services/: test_claim_generation.py
tests/test_utils/: test_text.py
